--- a/radzlist/templates/base.html
+++ b/radzlist/templates/base.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   </head>
 
   <body>
@@ -67,6 +71,8 @@
       {% block content %}
       {% endblock content %}
     </div>
+
+    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
   </body>
 
 </html>
